--- a/smartfarm_page/templates/covid19.html
+++ b/smartfarm_page/templates/covid19.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>AICT 공공융합플랫폼 :: 자료실</title>
+        <title>AICT 공공융합플랫폼 :: 코로나19 현황 분석</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{% static 'smartfarm_page/assets/favicon.ico' %}" />
         <!-- Bootstrap icons-->
