made the covid page and added covid graph

--- a/smartfarm_page/templates/covid19.html
+++ b/smartfarm_page/templates/covid19.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="card-body">
                         <div class="chart-area">
-                            <canvas id="covid_happen" width="120git add.0" height="500"></canvas>
+                            <canvas id="covid_happen" width="1200" height="500"></canvas>
                         </div>
                     </div>
                 </div>
