Solved covid page error

--- a/smartfarm_page/templates/covid19.html
+++ b/smartfarm_page/templates/covid19.html
@@ -115,44 +115,44 @@
                 <div class="row mb-5"></div>
                 <div class="row mb-5"></div>
             </div>
-
             <!-- Footer-->
             <footer class="footer bg-light">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
-                            <ul class="list-inline mb-2">
-                                <li class="list-inline-item"><a href="https://aict.snu.ac.kr/?p=18">연구원 소개</a></li>
-                                <li class="list-inline-item">⋅</li>
-                                <li class="list-inline-item"><a href="https://aict.snu.ac.kr/?p=31">공공융합플랫폼 소개</a></li>
-                                <li class="list-inline-item">⋅</li>
-                                <li class="list-inline-item"><a href="https://aict.snu.ac.kr/?p=17">찾아오시는길</a></li>
-                                <li class="list-inline-item">⋅</li>
-                                <li class="list-inline-item"><a href="https://aict.snu.ac.kr/?p=125">개인정보처리방침</a></li>
-                            </ul>
-                            <p class="text-muted small mb-4 mb-lg-0">&copy;ADVANCED INSTITUTE OF CONVERGENCE TECHNOLOGY ALL RIGHTS RESERVED. </p>
-                        </div>
-                        <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
-                            <ul class="list-inline mb-0">
-                                <li class="list-inline-item me-4">
-                                    <a href="https://aict.snu.ac.kr/">
-                                        <img src="{% static 'smartfarm_page/assets/img/aict_logo.png' %}" width="43" height="43" alt="">
-                                    </a>
-                                </li>
-                                <li class="list-inline-item me-4">
-                                    <a href="https://www.snu.ac.kr/">
-                                        <img src="{% static 'smartfarm_page/assets/img/snu_logo.png' %}" width="43" height="43" alt="">
-                                    </a>
-                                </li>
-                                <li class="list-inline-item me-4">
-                                    <a href="https://www.gg.go.kr/">
+            <div class="row mb-5"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
+                        <ul class="list-inline mb-2">
+                            <li class="list-inline-item"><a href="https://aict.snu.ac.kr/?p=18">연구원 소개</a></li>
+                            <li class="list-inline-item">⋅</li>
+                            <li class="list-inline-item"><a href="https://aict.snu.ac.kr/?p=31">공공융합플랫폼 소개</a></li>
+                            <li class="list-inline-item">⋅</li>
+                            <li class="list-inline-item"><a href="https://aict.snu.ac.kr/?p=17">찾아오시는길</a></li>
+                            <li class="list-inline-item">⋅</li>
+                            <li class="list-inline-item"><a href="https://aict.snu.ac.kr/?p=125">개인정보처리방침</a></li>
+                        </ul>
+                        <p class="text-muted small mb-4 mb-lg-0">&copy;ADVANCED INSTITUTE OF CONVERGENCE TECHNOLOGY ALL RIGHTS RESERVED. </p>
+                    </div>
+                    <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item me-4">
+                                <a href="https://aict.snu.ac.kr/">
+                                    <img src="{% static 'smartfarm_page/assets/img/aict_logo.png' %}" width="43" height="43" alt="">
+                                </a>
+                            </li>
+                            <li class="list-inline-item me-4">
+                                <a href="https://www.snu.ac.kr/">
+                                    <img src="{% static 'smartfarm_page/assets/img/snu_logo.png' %}" width="43" height="43" alt="">
+                                </a>
+                            </li>
+                            <li class="list-inline-item me-4">
+                                <a href="https://www.gg.go.kr/">
                                     <img src="{% static 'smartfarm_page/assets/img/ggd_logo.png' %}" width="55" height="25" alt="">
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
+            </div>
             </footer>
         </div>
     </body>
